[project]
name = "point_cloud_editor"
version = "0.1.0"
description = "Point Cloud Editor - Remove isolated points from point clouds"

[tool.lichtfeld]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.4.2"
required_features = []

[tool.uv.sources]
scipy = { index = "pytorch-nightly" }
